[tool.poetry]
name = "beqdesigner"
version = "2.0.0a1"
description = "A Qt based app for designing BassEQ filters"
authors = ["3ll3d00d <mattkhan+beqdesigner@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://beqdesigner.readthedocs.io/"
repository = "https://github.com/3ll3d00d/beqdesigner"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "*"
ffmpeg-python = "*"
soundfile = "*"
resampy = "*"
pyqtgraph = "*"
numpy = "*"
scipy = "*"
qtpy = "*"
qtawesome = "*"
sortedcontainers = "*"
pillow = "*"
requests = "*"
awesomeversion = "*"
markdown = "*"
plumbum = "*"
graphviz = "*"
sanitize-filename = "*"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
distro = "*"
atomicwrites = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
