[project]
name = "beqdesigner"
version = "2.1.0"
description = "A Qt based app for designing BassEQ filters"
authors = [{ name = "3ll3d00d", email = "mattkhan+beqdesigner@gmail.com" }]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pyqt6",
    "ffmpeg-python",
    "soundfile",
    "pyqtgraph",
    "numpy",
    "scipy",
    "qtpy",
    "qtawesome",
    "sortedcontainers",
    "pillow",
    "requests",
    "awesomeversion",
    "markdown",
    "plumbum",
    "graphviz",
    "sanitize-filename",
    "matplotlib",
    "soxr",
]

[project.urls]
Homepage = "https://beqdesigner.readthedocs.io/"
Repository = "https://github.com/3ll3d00d/beqdesigner"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "distro",
    "atomicwrites",
    "scipy-stubs",
]

[tool.uv]
package = false
